# deep_learning

./: README.md  pyproject.toml
src/: schema.py
src/activations/: wavelet.py
src/autoencoders/: autoencoder.py  priors.py  utils.py  vae.py
src/data_generators/: circles.py  utils.py
src/losses/: mmd_loss.py  vae_loss.py
src/transformers/: attention.py
