[project]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = [
    {name = "Erick HM",email = "erickhindsmingo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "check-shapes (>=1.1.1,<2.0.0)",
    "torch (==2.2.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
